@@ -1,7 +1,7 @@
 ---
 abstract: 'SGML to PYX parser.'
 author:
-  - 'Michal Spacek <skim@cpan.org>'
+  - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.07
