@@ -259,13 +259,13 @@ L<https://github.com/michal-josef-spacek/SGML-PYX>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © Michal Špaček 2015-2016
+ © Michal Josef Špaček 2015-2016
  BSD 2-Clause License
 
 =head1 VERSION
