@@ -79,12 +79,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/SGML-PYX>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2015-2016
+     © Michal Josef Špaček 2015-2016
      BSD 2-Clause License
 
 VERSION
